--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -560,10 +560,18 @@ jobs:
       run: kind delete cluster
       if: always()
 
-  release:
+  # aggregate the unit and acceptance test results into a single job
+  test:
     needs:
     - unit
     - acceptance
+    runs-on: ubuntu-latest
+    steps:
+    - run: echo "it passed"
+
+  release:
+    needs:
+    - test
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
