--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: cartographer-conventions-system
+namespace: cartographer-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
@@ -40,16 +40,6 @@ patchesStrategicMerge:
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
 # 'CERTMANAGER' needs to be enabled to use ca injection
 - webhookcainjection_patch.yaml
-
-patchesJson6902:
-
-# change the namespace resource's name from system to cartographer-conventions-system
-# to run multiple managers in a single namespace.
-- target:
-    version: v1
-    kind: Namespace
-    name: system
-  path: namespace_patch.yaml
 
 # the following config is for teaching kustomize how to do var substitution
 vars:
