First class cert-manager support
Remove the annotation that referenced a cert-manager Certificate with
a proper field on the ClusterPodConvention's spec.  The behavior is
otherwise identical.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/samples/convention-server/server.yaml
+++ b/samples/convention-server/server.yaml
@@ -101,10 +101,11 @@ apiVersion: conventions.carto.run/v1alpha1
 kind: ClusterPodConvention
 metadata:
   name: sample
-  annotations:
-    conventions.carto.run/inject-ca-from: "sample-conventions/webhook-cert"
 spec:
   webhook:
+    certificate:
+      namespace: sample-conventions
+      name: webhook-cert
     clientConfig:
       service:
         name: webhook
