--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,8 @@ on:
     - 'main'
     - '!dependabot/**'
     tags:
-    - '**'
+    # semver tags
+    - 'v[0-9]+\.[0-9]+\.[0-9]+-?**'
   pull_request: {}
 
 jobs:
