Switch component label to app.kubernetes.io/component
Prefixing labels is a best practice and `app.kubernetes.io/component` is
a well known label. Other tools can use this label to identify resources
that belong to Cartographer Conventions.

Also dropping the label value namespace, so `conventions.carto.run` ->
`conventions`.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -10,7 +10,7 @@ namePrefix: cartographer-conventions-
 
 # Labels to add to all resources and selectors.
 commonLabels:
-  component: conventions.carto.run
+  app.kubernetes.io/component: conventions
 
 bases:
 - ../crd
