--- a/api/openapi-spec/conventions-server.yaml
+++ b/api/openapi-spec/conventions-server.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Conventions server 
-  description: a sample conventions server
+  description: a sample conventions server.
   version: 1.0.0
   license:
     name: Apache-2.0
@@ -9,11 +9,11 @@ info:
 paths:
   /webhook:
     post:
-      description: a sample conventions server
+      description: a sample conventions server.
       requestBody:
         description: |
-          Contains data required to allow the conventions controller to be able to apply a 
-          set of defined conventions.
+          The PodConventionContext as defined in the API object webhooks.conventions.apps.tanzu.vmware.com API group 
+          is the structure used for both request and response from the convention server.
         content:
            "application/json":
               schema: 
@@ -26,7 +26,7 @@ paths:
               schema:
                $ref: "#/components/schemas/PodConventionContext"
         400:
-          description: Return error if unable to decode request body into a PodConventionContext type or if request body is nil 
+          description: Return error if unable to decode request body into a PodConventionContext type or if request body is nil. 
           content:
             "application/json":
               schema:
@@ -40,9 +40,9 @@ paths:
 components:
   schemas:
     PodConventionContext:
-      description: a wrapper for the PodConventionContextSpec and the PodConventionContextStatus
+      description: a wrapper for the PodConventionContextSpec and the PodConventionContextStatus.
       type: object
-      properteies:
+      properties:
         apiVersion: 
           type: string
         kind: 
@@ -58,13 +58,16 @@ components:
           $ref: "#/components/schemas/PodConventionContextStatus"
     PodConventionContextSpec:
       type: object
-      description: a wrapper of the PodTemplateSpec and the ImageConfig provided in the request body of the server
+      description: a wrapper of the PodTemplateSpec and the ImageConfig provided in the request body of the server.
       properties:
         template:
           $ref: "#/components/schemas/PodTemplateSpec"
         imageConfig:
           type: array 
-          description: an array of imageConfig objects with each image configuration object holding the name of the image, the BOM, and the OCI image configuration with image metadata from the repository.
+          description: |
+            an array of imageConfig objects with each image configuration object holding the name of the image, the BOM, and the OCI image
+            configuration with image metadata from the repository. Each of the image config array entries have a 1:1 mapping to 
+            images referenced in the PodTemplateSpec. 
           items:
             $ref: "#/components/schemas/ImageConfig"
     PodTemplateSpec:
@@ -72,7 +75,7 @@ components:
       properties:
         spec: 
           type: object
-          description: defines the PodTemplateSpec to be enriched by conventions
+          description: defines the PodTemplateSpec to be enriched by conventions.
         metadata:
           type: object
           properties:
@@ -89,16 +92,22 @@ components:
       properties: 
         image: 
           type: string 
-          description: a string reference to the image name and tag or associated digest
+          description: a string reference to the image name and tag or associated digest.
           example: "example.com/repository/nginx:alpine"
         BOMs:
           type: array
-          description: an array of Bills of Materials (BOMs) describing the software components and their dependencies.
+          description: | 
+            an array of Bills of Materials (BOMs) describing the software components and their dependencies and may be zero or more per image.
           items:
             $ref: "#/components/schemas/BOM"
+          example: | 
+            "boms": [{
+                "name": "bom-name",
+                "raw": "a byte array"
+            }],
         config: 
           type: object 
-          description: a ggcrv1 config file object
+          description: a ggcrv1 config file object.
     BOM: 
       type: object 
       properties:
@@ -106,19 +115,30 @@ components:
           description: bom-name
           type: string 
         raw: 
-          description: a byte array with the encoded content of the BOM
+          description: a byte array with the encoded content of the BOM.
           type: string
+      example: | 
+        {
+          "name": "bom-name",
+          "raw": "some byte array"
+        }
     PodConventionContextStatus:
-      description: status type used to represent the current status of the context retrieved by the request
+      description: status type used to represent the current status of the context retrieved by the request.
       type: object 
       properties:
         template: 
           $ref: "#/components/schemas/PodTemplateSpec"
         appliedConventions:
-          description: a string array of conventions to be applied 
+          description: list of names of conventions applied
           type: array 
           items:
-            type: string        
+            type: string
+          example: |
+              "appliedConventions": [ 
+                "convention-1", 
+                "convention-2",
+                "convention-4" 
+              ]        
     Error:
       type: object
       properties:
