--- a/api/openapi-spec/conventions-server.yaml
+++ b/api/openapi-spec/conventions-server.yaml
@@ -1,8 +1,10 @@
 openapi: 3.0.0
 info:
-  title: Conventions Server API
+  title: Pod convention webhook
   description: |
-    This API must be implemented in order to relay conventions to be be applied.
+    This API defines the expected request and response format from the conventions server. The webhook path can be configured in the ClusterPodConvention 
+    on either .spec.webhook.clientConfig.url or .spec.webhook.clientConfig.service.path with the later preferred if the 
+    convention server is to run on the same cluster as workoads.
   version: 1.0.0-alpha.1   
   license:
     name: Apache-2.0
@@ -17,23 +19,16 @@ paths:
                $ref: "#/components/schemas/PodConventionContext"
       responses:
         200:
-          description: Return a succes message once all conventions are applied successfully
+          description: Expected response once all conventions are applied successfully
           content: 
             "application/json":
               schema:
                $ref: "#/components/schemas/PodConventionContext"
         400:
           description: Return an error if unable to decode request body into a PodConventionContext type or if request body is nil. 
-          content:
-            "application/json":
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
         500:
-          description: Internal server error
-          content:
-            "application/json":
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
+          description: Return an error if unable to apply conventions.
+
 components:
   schemas:
     PodConventionContext:
@@ -82,12 +77,10 @@ components:
           properties:
             annotations:
               type: object
-              additionalProperties:
-                type: string
+              additionalProperties: true 
             labels:
               type: object
-              additionalProperties:
-                type: string
+              additionalProperties: true
     ImageConfig:
       type: object 
       properties: 
@@ -135,16 +128,4 @@ components:
                 "convention-1", 
                 "convention-2",
                 "convention-4" 
-              ]        
-    Error:
-      type: object
-      properties:
-        message:
-          type: string
-          example: "Some unexpected error"
-          
-    ErrorResponse:
-      type: object 
-      properties:
-        error:
-          $ref: "#/components/schemas/Error"
+              ] 
